 # Fixed issue [#23241] Saving category while validating rules fails (Mark Dexter, Christophe Demko).
 # Fixed issue [#21837] @todo ACL - Disallow creation of Super User & Admin group by non Super User (Michael Babker, Christopher Garvis, Elin Waring).
 # Fixed issue [#23306] "Add New Article" quick icon permissions check (Michael Babker, Elin Waring, Christophe Demko).
  
16-Nov-2010 Christophe Demko
 # Fix the Edit profile permission

16-Nov-2010 Mark Dexter
# [#23328] Unpublished category - Featured - Errors in content and contact component

16-Nov-2010 Jean-Marie Simonet
 $ Deleting redundant strings.
 $ Correcting wrong EOL from [#23184]
 # [#23334] error in sample data. Thanks Dennis.

-------------------- 1.6.0 Beta14 Release [15-Nov-2010] ------------------

15-Nov-2010 Mark Dexter
# Sample data fixes (thanks Elin Waring)
# [#23184] Need to handle content, modules, menu items when a viewing permission level is deleted
# [#23319] Can't install Joomla or choose the accessible admin template without a mouse (thanks Andrea Tarr)
# Fix About Parks module assignment in sample data
# [#23324] PATCH: Modeladmin using wrong key while loading (thanks Harald Leithner)

15-Nov-2010 Andrew Eddie
 # Fixed issue [#23247] behavior.keepalive with long session lifetime is causing firefox to freeze/crash (Markus Bopp, Ian MacLennan).
 # Fixed issue [#23007] locked categories still available (Adrian Louter, Elin Waring).
 # Fixed issue [#23069] Theoretical com_config exploit (Matt Thomas).

15-Nov-2010 Jean-Marie Simonet
 $ Adding missing string
 # [#23318] Remove hardcoded style so that RTL will work. Thanks Andrea.
 $ Moving and consolidated some strings
 
14-Nov-2010 Mark Dexter
# [#21571] category blog view drill down does not maintain layout style

14-Nov-2010 Jean-Marie Simonet
 # [#23217] Move rules strings to library language file and rename keys for consistency. Consolidated some strings.
 # [#21264] RTL issues with media manager. Thanks Andrea.
 