@@ -27,11 +27,11 @@ COM_USERS_CONFIG_SAVE_FAILED="An error was encountered while saving the configur
 COM_USERS_CONFIGURATION="Users Configuration"
 COM_USERS_DEBUG_EXPLICIT_ALLOW="[ %s ] Allowed"
 COM_USERS_DEBUG_EXPLICIT_DENY="[ %s ] Forbidden"
-COM_USERS_DEBUG_GROUP="[Debug Permissions Report]"
+COM_USERS_DEBUG_GROUP="Debug Permissions Report"
 COM_USERS_DEBUG_IMPLICIT_DENY="[ %s ] Not Allowed"
 COM_USERS_DEBUG_LEGEND="Legend:"
 COM_USERS_DEBUG_NO_CHECK="[ &nbsp; ] Not Applicable"
-COM_USERS_DEBUG_USER="[Debug Permissions Report]"
+COM_USERS_DEBUG_USER="Debug Permissions Report"
 COM_USERS_DELETE_ERROR_INVALID_GROUP="You cannot delete user groups to which you belong."
 COM_USERS_EDIT_USER="Edit User %s"
 COM_USERS_ERROR_INVALID_GROUP="Invalid Group"
@@ -109,6 +109,7 @@ COM_USERS_NO_LEVELS_SELECTED="No Viewing Access Levels selected"
 COM_USERS_OPTION_LEVEL_CATEGORY="%d (top category)"
 COM_USERS_OPTION_LEVEL_COMPONENT="%d (component)"
 COM_USERS_OPTION_LEVEL_DEEPER="%d (deeper)"
+COM_USERS_OPTION_SELECT_COMPONENT="- Select Component -"
 COM_USERS_OPTION_SELECT_LEVEL_END="- Select End Level -"
 COM_USERS_OPTION_SELECT_LEVEL_START="- Select Start Level -"
 COM_USERS_SEARCH_ACCESS_LEVELS="Search Viewing Access Levels"
