@@ -69,6 +69,10 @@ $listDirn	= $this->state->get('list.direction');
 					<?php else : ?>
 						<?php echo $this->escape($item->title); ?>
 					<?php endif; ?>
+					<?php if (JDEBUG) : ?>
+					<br /><div class="button2-left smallsub"><div class="blank"><a href="<?php echo JRoute::_('index.php?option=com_users&view=debuggroup&group_id='.(int) $item->id);?>">
+						<?php echo JText::_('COM_USERS_DEBUG_GROUP');?></a></div></div>
+					<?php endif; ?>
 				</td>
 				<td class="center">
 					<?php echo $item->user_count ? $item->user_count : ''; ?>
