@@ -114,6 +114,10 @@ $listDirn	= $this->state->get('list.direction');
 					<?php else : ?>
 						<?php echo $this->escape($item->name); ?>
 					<?php endif; ?>
+					<?php if (JDEBUG) : ?>
+					<br /><div class="button2-left smallsub"><div class="blank"><a href="<?php echo JRoute::_('index.php?option=com_users&view=debuguser&user_id='.(int) $item->id);?>">
+						<?php echo JText::_('COM_USERS_DEBUG_USER');?></a></div></div>
+					<?php endif; ?>
 				</td>
 				<td class="center">
 					<?php echo $this->escape($item->username); ?>
